# Antigravity_multyMCP

./: .gitignore  Cargo.toml  README.md  config_template.json  mcp_ollama_nocturno.py  monitor_sync.py  test_bridges.py
ENTREGABLE_ALUMNOS/: LEAME.md
src/: local_ops.rs  main.rs  mcp_protocol.rs  providers.rs
